TAG: assemblyseqload-tr11750-BP
DATE: 04/08/2015
STAFF: kstone


TAG: assemblyseqload-5-2-1-5
TAG: assemblyseqload-5-2-1-4
DATE: 04/02/2015
STAFF: sc
CHANGES: TR11959 NCBI release 105
- SEQ_RELEASE_DATE=2015/02/09
- SEQ_RELEASE_NO="GRCm38.p3"

TAG: assemblyseqload-5-2-1-3
DATE: 01/16/2015
STAFF: sc
CHANGES: TR11890/VEGA 58
a) vega_assemblyseqload.config - updated SEQ_RELEASE_DATE

TAG: assemblyseqload-5-2-1-2
DATE: 12/07/2014
STAFF: sc
CHANGES: TR11872/ENSEMBL 78
a) ensembl_assemblyseqload.config - updated SEQ_RELEASE_DATE

TAG: assemblyseqload-5-2-1-1
DATE: 12/02/2014
STAFF: sc
CHANGES: TR11794/ENSEMBL 76
a) ensembl_assemblyseqload.config - updated SEQ_RELEASE_DATE

TAG: assemblyseqload-5-1-9-1
DATE: 08/11/2014
STAFF: lec
CHANGES: TR11716/VEGA 56
a) vega_ensemblseqload : SEQ_RELEASE_DATA

TAG: assemblyseqload-5-1-6-1
DATE: 01/23/2014
STAFF: lec
CHANGES: TR11555/ensembl 74

TAG: assemblyseqload-5-1-5-2
TAG: assemblyseqload-5-1-5-1
DATE: 12/03/2013
STAFF: lec
CHANGES: TR11528/vega 54

TAG: assemblyseqload-5-1-4-1
DATE: 06/19/2013
STAFF: lec
CHANGES: TR11316/ensembl 72/vega 52

TAG: assemblyseqload-5-1-1-3
TAG: assemblyseqload-5-1-1-2
DATE: 11/20/2012
STAFF: sc
CHANGES: Added visio do I found when cleaning out my home directory

TAG: assemblyseqload-5-1-1-1
DATE: 11/07/2012
STAFF: sc
CHANGES: TR7106 (CFAM) TR10711 (Build 38) final tag

TAG: assemblyseqload-5-0-0-4
DATE: 10/11/2012
STAFF: sc
CHANGES: TR7106 (CFAM) TR10711 (Build 38)
1) Update  *assemblyseqload.config:
	SEQ_RELEASE_NO="GRCm38"
	COORD_VERSION="GRCm38"
TAG: assemblyseqload-5-0-0-3
DATE: 09/17/2012
STAFF: sc
CHANGES: TR7106 (CFAM) TR10711 (Build 38)
1) *assemblyseqload.config:COORD_COLLECTION_ABBREV changes for C4AM - set to display value instead of default which is same value as name

TAG: assemblyseqload-5-0-0-2
TAG: assemblyseqload-5-0-0-1
DATE: 08/31/2012
STAFF: sc
CHANGES: TR7106 (CFAM) TR10711 (Build 38)
1) config changes for build 38
2) SEQ_RELEASE_DATE needs to be in yyyy/mm/dd format
