@@ -1,7 +1,11 @@
+TAG: assemblyseqload-tr11750-1
+DATE: 05/22/2015
+STAFF: lec
+a) assemblyseqload.sh : seqcacheload/seqdescription.csh : obsolete
+
 TAG: assemblyseqload-tr11750-BP
 DATE: 04/08/2015
 STAFF: kstone
-
 
 TAG: assemblyseqload-5-2-1-5
 TAG: assemblyseqload-5-2-1-4
